# axum-todo-API

./: .env  .env.example  Cargo.toml
migrations/: 20260625022754_001_init.sql.sql  20260627075627_001_init.sql.sql
src/: db.rs  error.rs  handlers.rs  main.rs  models.rs  repository.rs
